// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddGroupServiceAccounts /> should render correctly empty 1`] = `
<body
  class="pf-v5-c-backdrop__open"
>
  <div
    aria-hidden="true"
  />
  <div
    class="pf-v5-c-backdrop"
    id="pf-modal-part-3"
  >
    <div
      class="pf-v5-l-bullseye"
    >
      <div
        aria-describedby="pf-modal-part-2"
        aria-labelledby="pf-modal-part-1"
        aria-modal="true"
        class="pf-v5-c-modal-box rbac pf-m-md"
        data-ouia-component-id="OUIA-Generated-Modal-medium-1"
        data-ouia-component-type="PF5/ModalContent"
        data-ouia-safe="true"
        id="pf-modal-part-0"
        role="dialog"
      >
        <div
          class="pf-v5-c-modal-box__close"
        >
          <button
            aria-disabled="false"
            aria-label="Close"
            class="pf-v5-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Modal-medium-1-ModalBoxCloseButton"
            data-ouia-component-type="PF5/Button"
            data-ouia-safe="true"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="pf-v5-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 352 512"
              width="1em"
            >
              <path
                d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
              />
            </svg>
          </button>
        </div>
        <header
          class="pf-v5-c-modal-box__header"
        >
          <h1
            class="pf-v5-c-modal-box__title"
            id="pf-modal-part-1"
          >
            <span
              class="pf-v5-c-modal-box__title-text"
            >
              Add service account
            </span>
          </h1>
        </header>
        <div
          class="pf-v5-c-modal-box__body"
          id="pf-modal-part-2"
        >
          <div
            class="pf-v5-l-stack pf-m-gutter"
          >
            <div
              class="pf-v5-l-stack__item"
            >
              <div
                class="pf-v5-c-content"
              >
                This list contains all service accounts associated with your Red Hat organization account. Select any service accounts you wish to associate with the User Access group.
                <div
                  class="pf-v5-c-alert pf-m-inline pf-m-plain pf-m-info pf-v5-u-mt-sm rbac-service-accounts-alert"
                  data-ouia-component-id="OUIA-Generated-Alert-info-1"
                  data-ouia-component-type="PF5/Alert"
                  data-ouia-safe="true"
                >
                  <div
                    class="pf-v5-c-alert__icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v5-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                      />
                    </svg>
                  </div>
                  <span
                    class="pf-v5-c-alert__title"
                  >
                    <span
                      class="pf-v5-screen-reader"
                    >
                      Info alert:
                    </span>
                    To add, reset credentials, or delete service accounts visit the {link}.
                  </span>
                </div>
              </div>
            </div>
            <div
              class="pf-v5-l-stack__item rbac-add-service-account-modal"
            >
              <div
                class="rbac-service-accounts-list"
              >
                <div
                  class="pf-v5-l-stack"
                  data-ouia-component-id="group-add-service-accounts-stack"
                >
                  <div
                    class="pf-v5-l-stack__item"
                    data-ouia-component-id="group-add-service-accounts-stack-item-0"
                  >
                    <div
                      class="pf-v5-c-toolbar"
                      data-ouia-component-id="group-add-service-accounts-header-toolbar"
                      data-ouia-component-type="PF5/Toolbar"
                      data-ouia-safe="true"
                      id="pf-random-id-0"
                    >
                      <div
                        class="pf-v5-c-toolbar__content"
                      >
                        <div
                          class="pf-v5-c-toolbar__content-section"
                        >
                          <div
                            class="pf-v5-c-toolbar__item"
                            data-ouia-component-id="group-add-service-accounts-header-toolbar-bulk-select"
                          >
                            <div
                              class="pf-v5-c-menu-toggle pf-m-split-button"
                            >
                              <label
                                class="pf-v5-c-check pf-m-standalone"
                              >
                                <input
                                  aria-invalid="false"
                                  aria-label="Select page"
                                  class="pf-v5-c-check__input"
                                  data-ouia-component-id="BulkSelect-checkbox"
                                  data-ouia-component-type="PF5/MenuToggleCheckbox"
                                  data-ouia-safe="true"
                                  name="BulkSelect-checkbox"
                                  type="checkbox"
                                />
                              </label>
                              <button
                                aria-expanded="false"
                                aria-label="Bulk select toggle"
                                class="pf-v5-c-menu-toggle__button"
                                data-ouia-component-id="BulkSelect-toggle"
                                data-ouia-component-type="PF5/MenuToggle"
                                data-ouia-safe="true"
                                type="button"
                              >
                                <span
                                  class="pf-v5-c-menu-toggle__controls"
                                >
                                  <span
                                    class="pf-v5-c-menu-toggle__toggle-icon"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="pf-v5-svg"
                                      fill="currentColor"
                                      height="1em"
                                      role="img"
                                      viewBox="0 0 320 512"
                                      width="1em"
                                    >
                                      <path
                                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </button>
                            </div>
                          </div>
                          <div
                            class="pf-v5-c-toolbar__item pf-m-pagination"
                            data-ouia-component-id="group-add-service-accounts-header-toolbar-pagination"
                          >
                            <div
                              class="pf-v5-c-pagination"
                              data-ouia-component-id="OUIA-Generated-Pagination-top-1"
                              data-ouia-component-type="PF5/Pagination"
                              data-ouia-safe="true"
                              id="options-menu-top-pagination"
                              style="--pf-v5-c-pagination__nav-page-select--c-form-control--width-chars: 2;"
                            >
                              <div
                                class="pf-v5-c-pagination__total-items"
                              >
                                <b>
                                  1
                                   - 
                                  1
                                </b>
                                 
                                of
                                 
                                <b>
                                  1
                                </b>
                                 
                              </div>
                              <button
                                aria-expanded="false"
                                aria-haspopup="listbox"
                                class="pf-v5-c-menu-toggle pf-m-plain pf-m-text"
                                data-ouia-component-id="OUIA-Generated-MenuToggle-plainText-1"
                                data-ouia-component-type="PF5/MenuToggle"
                                data-ouia-safe="true"
                                id="options-menu-top-toggle"
                                type="button"
                              >
                                <span
                                  class="pf-v5-c-menu-toggle__text"
                                >
                                  <b>
                                    1
                                     - 
                                    1
                                  </b>
                                   
                                  of
                                   
                                  <b>
                                    1
                                  </b>
                                   
                                </span>
                                <span
                                  class="pf-v5-c-menu-toggle__controls"
                                >
                                  <span
                                    class="pf-v5-c-menu-toggle__toggle-icon"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="pf-v5-svg"
                                      fill="currentColor"
                                      height="1em"
                                      role="img"
                                      viewBox="0 0 320 512"
                                      width="1em"
                                    >
                                      <path
                                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </button>
                              <nav
                                aria-label="Pagination"
                                class="pf-v5-c-pagination__nav"
                              >
                                <div
                                  class="pf-v5-c-pagination__nav-control pf-m-first"
                                >
                                  <button
                                    aria-disabled="true"
                                    aria-label="Go to first page"
                                    class="pf-v5-c-button pf-m-plain pf-m-disabled"
                                    data-action="first"
                                    data-ouia-component-id="OUIA-Generated-Button-plain-2"
                                    data-ouia-component-type="PF5/Button"
                                    data-ouia-safe="true"
                                    disabled=""
                                    type="button"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="pf-v5-svg"
                                      fill="currentColor"
                                      height="1em"
                                      role="img"
                                      viewBox="0 0 448 512"
                                      width="1em"
                                    >
                                      <path
                                        d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
                                      />
                                    </svg>
                                  </button>
                                </div>
                                <div
                                  class="pf-v5-c-pagination__nav-control"
                                >
                                  <button
                                    aria-disabled="true"
                                    aria-label="Go to previous page"
                                    class="pf-v5-c-button pf-m-plain pf-m-disabled"
                                    data-action="previous"
                                    data-ouia-component-id="OUIA-Generated-Button-plain-3"
                                    data-ouia-component-type="PF5/Button"
                                    data-ouia-safe="true"
                                    disabled=""
                                    type="button"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="pf-v5-svg"
                                      fill="currentColor"
                                      height="1em"
                                      role="img"
                                      viewBox="0 0 256 512"
                                      width="1em"
                                    >
                                      <path
                                        d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                                      />
                                    </svg>
                                  </button>
                                </div>
                                <div
                                  class="pf-v5-c-pagination__nav-page-select"
                                >
                                  <span
                                    class="pf-v5-c-form-control pf-m-disabled"
                                  >
                                    <input
                                      aria-invalid="false"
                                      aria-label="Current page"
                                      data-ouia-component-id="OUIA-Generated-TextInputBase-1"
                                      data-ouia-component-type="PF5/TextInput"
                                      data-ouia-safe="true"
                                      disabled=""
                                      max="1"
                                      min="1"
                                      type="number"
                                      value="1"
                                    />
                                  </span>
                                  <span
                                    aria-hidden="true"
                                  >
                                    of
                                     
                                    1
                                  </span>
                                </div>
                                <div
                                  class="pf-v5-c-pagination__nav-control"
                                >
                                  <button
                                    aria-disabled="true"
                                    aria-label="Go to next page"
                                    class="pf-v5-c-button pf-m-plain pf-m-disabled"
                                    data-action="next"
                                    data-ouia-component-id="OUIA-Generated-Button-plain-4"
                                    data-ouia-component-type="PF5/Button"
                                    data-ouia-safe="true"
                                    disabled=""
                                    type="button"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="pf-v5-svg"
                                      fill="currentColor"
                                      height="1em"
                                      role="img"
                                      viewBox="0 0 256 512"
                                      width="1em"
                                    >
                                      <path
                                        d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                                      />
                                    </svg>
                                  </button>
                                </div>
                                <div
                                  class="pf-v5-c-pagination__nav-control pf-m-last"
                                >
                                  <button
                                    aria-disabled="true"
                                    aria-label="Go to last page"
                                    class="pf-v5-c-button pf-m-plain pf-m-disabled"
                                    data-action="last"
                                    data-ouia-component-id="OUIA-Generated-Button-plain-5"
                                    data-ouia-component-type="PF5/Button"
                                    data-ouia-safe="true"
                                    disabled=""
                                    type="button"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="pf-v5-svg"
                                      fill="currentColor"
                                      height="1em"
                                      role="img"
                                      viewBox="0 0 448 512"
                                      width="1em"
                                    >
                                      <path
                                        d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
                                      />
                                    </svg>
                                  </button>
                                </div>
                              </nav>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="pf-v5-c-toolbar__content pf-m-hidden"
                        hidden=""
                      >
                        <div
                          class="pf-v5-c-toolbar__group"
                        />
                        <div
                          class="pf-v5-c-toolbar__item"
                        >
                          <button
                            aria-disabled="false"
                            class="pf-v5-c-button pf-m-link pf-m-inline"
                            data-ouia-component-id="group-add-service-accounts-header-toolbar-clear-all-filters"
                            data-ouia-component-type="PF5/Button"
                            data-ouia-safe="true"
                            type="button"
                          >
                            Clear filters
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="pf-v5-l-stack__item"
                    data-ouia-component-id="group-add-service-accounts-stack-item-1"
                  >
                    <table
                      aria-label="Data table"
                      class="pf-v5-c-table pf-m-grid-md"
                      data-ouia-component-id="group-add-service-accounts-table"
                      data-ouia-component-type="PF5/Table"
                      data-ouia-safe="true"
                      role="grid"
                    >
                      <thead
                        class="pf-v5-c-table__thead"
                        data-ouia-component-id="group-add-service-accounts-table-thead"
                      >
                        <tr
                          class="pf-v5-c-table__tr"
                          data-ouia-component-id="group-add-service-accounts-table-tr-head"
                          data-ouia-component-type="PF5/TableRow"
                          data-ouia-safe="true"
                        >
                          <th
                            class="pf-v5-c-table__th"
                            scope="col"
                            tabindex="-1"
                          >
                            <span
                              class="pf-v5-screen-reader"
                            >
                              Data selection table head cell
                            </span>
                          </th>
                          <th
                            class="pf-v5-c-table__th"
                            data-ouia-component-id="group-add-service-accounts-table-th-0"
                            scope="col"
                            tabindex="-1"
                          >
                            Name
                          </th>
                          <th
                            class="pf-v5-c-table__th"
                            data-ouia-component-id="group-add-service-accounts-table-th-1"
                            scope="col"
                            tabindex="-1"
                          >
                            Description
                          </th>
                          <th
                            class="pf-v5-c-table__th"
                            data-ouia-component-id="group-add-service-accounts-table-th-2"
                            scope="col"
                            tabindex="-1"
                          >
                            Client ID
                          </th>
                          <th
                            class="pf-v5-c-table__th"
                            data-ouia-component-id="group-add-service-accounts-table-th-3"
                            scope="col"
                            tabindex="-1"
                          >
                            Owner
                          </th>
                          <th
                            class="pf-v5-c-table__th"
                            data-ouia-component-id="group-add-service-accounts-table-th-4"
                            scope="col"
                            tabindex="-1"
                          >
                            Time created
                          </th>
                        </tr>
                      </thead>
                      <div
                        class="pf-v5-c-empty-state"
                      >
                        <div
                          class="pf-v5-c-empty-state__content"
                        >
                          <div
                            class="pf-v5-c-empty-state__header"
                          >
                            <svg
                              aria-hidden="true"
                              class="pf-v5-svg"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              viewBox="0 0 512 512"
                              width="1em"
                            >
                              <path
                                d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                              />
                            </svg>
                            <div
                              class="pf-v5-c-empty-state__title"
                            >
                              <h4
                                class="pf-v5-c-empty-state__title-text"
                              >
                                No service accounts found
                              </h4>
                            </div>
                          </div>
                          <div
                            class="pf-v5-c-empty-state__body"
                          >
                            No service accounts found for this group.
                          </div>
                        </div>
                      </div>
                    </table>
                  </div>
                  <div
                    class="pf-v5-l-stack__item"
                    data-ouia-component-id="group-add-service-accounts-stack-item-2"
                  >
                    <div
                      class="pf-v5-c-toolbar"
                      data-ouia-component-id="group-add-service-accounts-footer-toolbar"
                      data-ouia-component-type="PF5/Toolbar"
                      data-ouia-safe="true"
                      id="pf-random-id-1"
                    >
                      <div
                        class="pf-v5-c-toolbar__content"
                      >
                        <div
                          class="pf-v5-c-toolbar__content-section"
                        >
                          <div
                            class="pf-v5-c-toolbar__item pf-m-pagination"
                            data-ouia-component-id="group-add-service-accounts-footer-toolbar-pagination"
                          >
                            <div
                              class="pf-v5-c-pagination"
                              data-ouia-component-id="OUIA-Generated-Pagination-top-2"
                              data-ouia-component-type="PF5/Pagination"
                              data-ouia-safe="true"
                              id="options-menu-top-pagination"
                              style="--pf-v5-c-pagination__nav-page-select--c-form-control--width-chars: 2;"
                            >
                              <div
                                class="pf-v5-c-pagination__total-items"
                              >
                                <b>
                                  1
                                   - 
                                  1
                                </b>
                                 
                                of
                                 
                                <b>
                                  1
                                </b>
                                 
                              </div>
                              <button
                                aria-expanded="false"
                                aria-haspopup="listbox"
                                class="pf-v5-c-menu-toggle pf-m-plain pf-m-text"
                                data-ouia-component-id="OUIA-Generated-MenuToggle-plainText-2"
                                data-ouia-component-type="PF5/MenuToggle"
                                data-ouia-safe="true"
                                id="options-menu-top-toggle"
                                type="button"
                              >
                                <span
                                  class="pf-v5-c-menu-toggle__text"
                                >
                                  <b>
                                    1
                                     - 
                                    1
                                  </b>
                                   
                                  of
                                   
                                  <b>
                                    1
                                  </b>
                                   
                                </span>
                                <span
                                  class="pf-v5-c-menu-toggle__controls"
                                >
                                  <span
                                    class="pf-v5-c-menu-toggle__toggle-icon"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="pf-v5-svg"
                                      fill="currentColor"
                                      height="1em"
                                      role="img"
                                      viewBox="0 0 320 512"
                                      width="1em"
                                    >
                                      <path
                                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </button>
                              <nav
                                aria-label="Pagination"
                                class="pf-v5-c-pagination__nav"
                              >
                                <div
                                  class="pf-v5-c-pagination__nav-control pf-m-first"
                                >
                                  <button
                                    aria-disabled="true"
                                    aria-label="Go to first page"
                                    class="pf-v5-c-button pf-m-plain pf-m-disabled"
                                    data-action="first"
                                    data-ouia-component-id="OUIA-Generated-Button-plain-6"
                                    data-ouia-component-type="PF5/Button"
                                    data-ouia-safe="true"
                                    disabled=""
                                    type="button"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="pf-v5-svg"
                                      fill="currentColor"
                                      height="1em"
                                      role="img"
                                      viewBox="0 0 448 512"
                                      width="1em"
                                    >
                                      <path
                                        d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
                                      />
                                    </svg>
                                  </button>
                                </div>
                                <div
                                  class="pf-v5-c-pagination__nav-control"
                                >
                                  <button
                                    aria-disabled="true"
                                    aria-label="Go to previous page"
                                    class="pf-v5-c-button pf-m-plain pf-m-disabled"
                                    data-action="previous"
                                    data-ouia-component-id="OUIA-Generated-Button-plain-7"
                                    data-ouia-component-type="PF5/Button"
                                    data-ouia-safe="true"
                                    disabled=""
                                    type="button"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="pf-v5-svg"
                                      fill="currentColor"
                                      height="1em"
                                      role="img"
                                      viewBox="0 0 256 512"
                                      width="1em"
                                    >
                                      <path
                                        d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                                      />
                                    </svg>
                                  </button>
                                </div>
                                <div
                                  class="pf-v5-c-pagination__nav-page-select"
                                >
                                  <span
                                    class="pf-v5-c-form-control pf-m-disabled"
                                  >
                                    <input
                                      aria-invalid="false"
                                      aria-label="Current page"
                                      data-ouia-component-id="OUIA-Generated-TextInputBase-2"
                                      data-ouia-component-type="PF5/TextInput"
                                      data-ouia-safe="true"
                                      disabled=""
                                      max="1"
                                      min="1"
                                      type="number"
                                      value="1"
                                    />
                                  </span>
                                  <span
                                    aria-hidden="true"
                                  >
                                    of
                                     
                                    1
                                  </span>
                                </div>
                                <div
                                  class="pf-v5-c-pagination__nav-control"
                                >
                                  <button
                                    aria-disabled="true"
                                    aria-label="Go to next page"
                                    class="pf-v5-c-button pf-m-plain pf-m-disabled"
                                    data-action="next"
                                    data-ouia-component-id="OUIA-Generated-Button-plain-8"
                                    data-ouia-component-type="PF5/Button"
                                    data-ouia-safe="true"
                                    disabled=""
                                    type="button"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="pf-v5-svg"
                                      fill="currentColor"
                                      height="1em"
                                      role="img"
                                      viewBox="0 0 256 512"
                                      width="1em"
                                    >
                                      <path
                                        d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                                      />
                                    </svg>
                                  </button>
                                </div>
                                <div
                                  class="pf-v5-c-pagination__nav-control pf-m-last"
                                >
                                  <button
                                    aria-disabled="true"
                                    aria-label="Go to last page"
                                    class="pf-v5-c-button pf-m-plain pf-m-disabled"
                                    data-action="last"
                                    data-ouia-component-id="OUIA-Generated-Button-plain-9"
                                    data-ouia-component-type="PF5/Button"
                                    data-ouia-safe="true"
                                    disabled=""
                                    type="button"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="pf-v5-svg"
                                      fill="currentColor"
                                      height="1em"
                                      role="img"
                                      viewBox="0 0 448 512"
                                      width="1em"
                                    >
                                      <path
                                        d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
                                      />
                                    </svg>
                                  </button>
                                </div>
                              </nav>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="pf-v5-c-toolbar__content pf-m-hidden"
                        hidden=""
                      >
                        <div
                          class="pf-v5-c-toolbar__group"
                        />
                        <div
                          class="pf-v5-c-toolbar__item"
                        >
                          <button
                            aria-disabled="false"
                            class="pf-v5-c-button pf-m-link pf-m-inline"
                            data-ouia-component-id="group-add-service-accounts-footer-toolbar-clear-all-filters"
                            data-ouia-component-type="PF5/Button"
                            data-ouia-safe="true"
                            type="button"
                          >
                            Clear filters
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <footer
          class="pf-v5-c-modal-box__footer"
        >
          <button
            aria-disabled="true"
            class="pf-v5-c-button pf-m-primary pf-m-disabled"
            data-ouia-component-id="primary-confirm-button"
            data-ouia-component-type="PF5/Button"
            data-ouia-safe="true"
            disabled=""
            type="button"
          >
            Add to group
          </button>
          <button
            aria-disabled="false"
            class="pf-v5-c-button pf-m-link"
            data-ouia-component-id="secondary-cancel-button"
            data-ouia-component-type="PF5/Button"
            data-ouia-safe="true"
            type="button"
          >
            Cancel
          </button>
        </footer>
      </div>
    </div>
  </div>
</body>
`;

exports[`<AddGroupServiceAccounts /> should render correctly with data 1`] = `
<body
  class="pf-v5-c-backdrop__open"
>
  <div
    aria-hidden="true"
  />
  <div
    class="pf-v5-c-backdrop"
    id="pf-modal-part-4"
  >
    <div
      class="pf-v5-l-bullseye"
    >
      <div
        aria-describedby="pf-modal-part-3"
        aria-labelledby="pf-modal-part-2"
        aria-modal="true"
        class="pf-v5-c-modal-box rbac pf-m-md"
        data-ouia-component-id="OUIA-Generated-Modal-medium-2"
        data-ouia-component-type="PF5/ModalContent"
        data-ouia-safe="true"
        id="pf-modal-part-1"
        role="dialog"
      >
        <div
          class="pf-v5-c-modal-box__close"
        >
          <button
            aria-disabled="false"
            aria-label="Close"
            class="pf-v5-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Modal-medium-2-ModalBoxCloseButton"
            data-ouia-component-type="PF5/Button"
            data-ouia-safe="true"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="pf-v5-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 352 512"
              width="1em"
            >
              <path
                d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
              />
            </svg>
          </button>
        </div>
        <header
          class="pf-v5-c-modal-box__header"
        >
          <h1
            class="pf-v5-c-modal-box__title"
            id="pf-modal-part-2"
          >
            <span
              class="pf-v5-c-modal-box__title-text"
            >
              Add service account
            </span>
          </h1>
        </header>
        <div
          class="pf-v5-c-modal-box__body"
          id="pf-modal-part-3"
        >
          <div
            class="pf-v5-l-stack pf-m-gutter"
          >
            <div
              class="pf-v5-l-stack__item"
            >
              <div
                class="pf-v5-c-content"
              >
                This list contains all service accounts associated with your Red Hat organization account. Select any service accounts you wish to associate with the User Access group.
                <div
                  class="pf-v5-c-alert pf-m-inline pf-m-plain pf-m-info pf-v5-u-mt-sm rbac-service-accounts-alert"
                  data-ouia-component-id="OUIA-Generated-Alert-info-2"
                  data-ouia-component-type="PF5/Alert"
                  data-ouia-safe="true"
                >
                  <div
                    class="pf-v5-c-alert__icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v5-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                      />
                    </svg>
                  </div>
                  <span
                    class="pf-v5-c-alert__title"
                  >
                    <span
                      class="pf-v5-screen-reader"
                    >
                      Info alert:
                    </span>
                    To add, reset credentials, or delete service accounts visit the {link}.
                  </span>
                </div>
              </div>
            </div>
            <div
              class="pf-v5-l-stack__item rbac-add-service-account-modal"
            >
              <div
                class="rbac-service-accounts-list"
              >
                <div
                  class="pf-v5-l-stack"
                  data-ouia-component-id="group-add-service-accounts-stack"
                >
                  <div
                    class="pf-v5-l-stack__item"
                    data-ouia-component-id="group-add-service-accounts-stack-item-0"
                  >
                    <div
                      class="pf-v5-c-toolbar"
                      data-ouia-component-id="group-add-service-accounts-header-toolbar"
                      data-ouia-component-type="PF5/Toolbar"
                      data-ouia-safe="true"
                      id="pf-random-id-2"
                    >
                      <div
                        class="pf-v5-c-toolbar__content"
                      >
                        <div
                          class="pf-v5-c-toolbar__content-section"
                        >
                          <div
                            class="pf-v5-c-toolbar__item"
                            data-ouia-component-id="group-add-service-accounts-header-toolbar-bulk-select"
                          >
                            <div
                              class="pf-v5-c-menu-toggle pf-m-split-button"
                            >
                              <label
                                class="pf-v5-c-check pf-m-standalone"
                              >
                                <input
                                  aria-invalid="false"
                                  aria-label="Select page"
                                  class="pf-v5-c-check__input"
                                  data-ouia-component-id="BulkSelect-checkbox"
                                  data-ouia-component-type="PF5/MenuToggleCheckbox"
                                  data-ouia-safe="true"
                                  name="BulkSelect-checkbox"
                                  type="checkbox"
                                />
                              </label>
                              <button
                                aria-expanded="false"
                                aria-label="Bulk select toggle"
                                class="pf-v5-c-menu-toggle__button"
                                data-ouia-component-id="BulkSelect-toggle"
                                data-ouia-component-type="PF5/MenuToggle"
                                data-ouia-safe="true"
                                type="button"
                              >
                                <span
                                  class="pf-v5-c-menu-toggle__controls"
                                >
                                  <span
                                    class="pf-v5-c-menu-toggle__toggle-icon"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="pf-v5-svg"
                                      fill="currentColor"
                                      height="1em"
                                      role="img"
                                      viewBox="0 0 320 512"
                                      width="1em"
                                    >
                                      <path
                                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </button>
                            </div>
                          </div>
                          <div
                            class="pf-v5-c-toolbar__item pf-m-pagination"
                            data-ouia-component-id="group-add-service-accounts-header-toolbar-pagination"
                          >
                            <div
                              class="pf-v5-c-pagination"
                              data-ouia-component-id="OUIA-Generated-Pagination-top-3"
                              data-ouia-component-type="PF5/Pagination"
                              data-ouia-safe="true"
                              id="options-menu-top-pagination"
                              style="--pf-v5-c-pagination__nav-page-select--c-form-control--width-chars: 2;"
                            >
                              <div
                                class="pf-v5-c-pagination__total-items"
                              >
                                <b>
                                  1
                                   - 
                                  2
                                </b>
                                 
                                of
                                 
                                <b>
                                  2
                                </b>
                                 
                              </div>
                              <button
                                aria-expanded="false"
                                aria-haspopup="listbox"
                                class="pf-v5-c-menu-toggle pf-m-plain pf-m-text"
                                data-ouia-component-id="OUIA-Generated-MenuToggle-plainText-3"
                                data-ouia-component-type="PF5/MenuToggle"
                                data-ouia-safe="true"
                                id="options-menu-top-toggle"
                                type="button"
                              >
                                <span
                                  class="pf-v5-c-menu-toggle__text"
                                >
                                  <b>
                                    1
                                     - 
                                    2
                                  </b>
                                   
                                  of
                                   
                                  <b>
                                    2
                                  </b>
                                   
                                </span>
                                <span
                                  class="pf-v5-c-menu-toggle__controls"
                                >
                                  <span
                                    class="pf-v5-c-menu-toggle__toggle-icon"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="pf-v5-svg"
                                      fill="currentColor"
                                      height="1em"
                                      role="img"
                                      viewBox="0 0 320 512"
                                      width="1em"
                                    >
                                      <path
                                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </button>
                              <nav
                                aria-label="Pagination"
                                class="pf-v5-c-pagination__nav"
                              >
                                <div
                                  class="pf-v5-c-pagination__nav-control pf-m-first"
                                >
                                  <button
                                    aria-disabled="true"
                                    aria-label="Go to first page"
                                    class="pf-v5-c-button pf-m-plain pf-m-disabled"
                                    data-action="first"
                                    data-ouia-component-id="OUIA-Generated-Button-plain-11"
                                    data-ouia-component-type="PF5/Button"
                                    data-ouia-safe="true"
                                    disabled=""
                                    type="button"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="pf-v5-svg"
                                      fill="currentColor"
                                      height="1em"
                                      role="img"
                                      viewBox="0 0 448 512"
                                      width="1em"
                                    >
                                      <path
                                        d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
                                      />
                                    </svg>
                                  </button>
                                </div>
                                <div
                                  class="pf-v5-c-pagination__nav-control"
                                >
                                  <button
                                    aria-disabled="true"
                                    aria-label="Go to previous page"
                                    class="pf-v5-c-button pf-m-plain pf-m-disabled"
                                    data-action="previous"
                                    data-ouia-component-id="OUIA-Generated-Button-plain-12"
                                    data-ouia-component-type="PF5/Button"
                                    data-ouia-safe="true"
                                    disabled=""
                                    type="button"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="pf-v5-svg"
                                      fill="currentColor"
                                      height="1em"
                                      role="img"
                                      viewBox="0 0 256 512"
                                      width="1em"
                                    >
                                      <path
                                        d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                                      />
                                    </svg>
                                  </button>
                                </div>
                                <div
                                  class="pf-v5-c-pagination__nav-page-select"
                                >
                                  <span
                                    class="pf-v5-c-form-control pf-m-disabled"
                                  >
                                    <input
                                      aria-invalid="false"
                                      aria-label="Current page"
                                      data-ouia-component-id="OUIA-Generated-TextInputBase-3"
                                      data-ouia-component-type="PF5/TextInput"
                                      data-ouia-safe="true"
                                      disabled=""
                                      max="1"
                                      min="1"
                                      type="number"
                                      value="1"
                                    />
                                  </span>
                                  <span
                                    aria-hidden="true"
                                  >
                                    of
                                     
                                    1
                                  </span>
                                </div>
                                <div
                                  class="pf-v5-c-pagination__nav-control"
                                >
                                  <button
                                    aria-disabled="true"
                                    aria-label="Go to next page"
                                    class="pf-v5-c-button pf-m-plain pf-m-disabled"
                                    data-action="next"
                                    data-ouia-component-id="OUIA-Generated-Button-plain-13"
                                    data-ouia-component-type="PF5/Button"
                                    data-ouia-safe="true"
                                    disabled=""
                                    type="button"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="pf-v5-svg"
                                      fill="currentColor"
                                      height="1em"
                                      role="img"
                                      viewBox="0 0 256 512"
                                      width="1em"
                                    >
                                      <path
                                        d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                                      />
                                    </svg>
                                  </button>
                                </div>
                                <div
                                  class="pf-v5-c-pagination__nav-control pf-m-last"
                                >
                                  <button
                                    aria-disabled="true"
                                    aria-label="Go to last page"
                                    class="pf-v5-c-button pf-m-plain pf-m-disabled"
                                    data-action="last"
                                    data-ouia-component-id="OUIA-Generated-Button-plain-14"
                                    data-ouia-component-type="PF5/Button"
                                    data-ouia-safe="true"
                                    disabled=""
                                    type="button"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="pf-v5-svg"
                                      fill="currentColor"
                                      height="1em"
                                      role="img"
                                      viewBox="0 0 448 512"
                                      width="1em"
                                    >
                                      <path
                                        d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
                                      />
                                    </svg>
                                  </button>
                                </div>
                              </nav>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="pf-v5-c-toolbar__content pf-m-hidden"
                        hidden=""
                      >
                        <div
                          class="pf-v5-c-toolbar__group"
                        />
                        <div
                          class="pf-v5-c-toolbar__item"
                        >
                          <button
                            aria-disabled="false"
                            class="pf-v5-c-button pf-m-link pf-m-inline"
                            data-ouia-component-id="group-add-service-accounts-header-toolbar-clear-all-filters"
                            data-ouia-component-type="PF5/Button"
                            data-ouia-safe="true"
                            type="button"
                          >
                            Clear filters
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="pf-v5-l-stack__item"
                    data-ouia-component-id="group-add-service-accounts-stack-item-1"
                  >
                    <table
                      aria-label="Data table"
                      class="pf-v5-c-table pf-m-grid-md"
                      data-ouia-component-id="group-add-service-accounts-table"
                      data-ouia-component-type="PF5/Table"
                      data-ouia-safe="true"
                      role="grid"
                    >
                      <thead
                        class="pf-v5-c-table__thead"
                        data-ouia-component-id="group-add-service-accounts-table-thead"
                      >
                        <tr
                          class="pf-v5-c-table__tr"
                          data-ouia-component-id="group-add-service-accounts-table-tr-head"
                          data-ouia-component-type="PF5/TableRow"
                          data-ouia-safe="true"
                        >
                          <th
                            class="pf-v5-c-table__th"
                            scope="col"
                            tabindex="-1"
                          >
                            <span
                              class="pf-v5-screen-reader"
                            >
                              Data selection table head cell
                            </span>
                          </th>
                          <th
                            class="pf-v5-c-table__th"
                            data-ouia-component-id="group-add-service-accounts-table-th-0"
                            scope="col"
                            tabindex="-1"
                          >
                            Name
                          </th>
                          <th
                            class="pf-v5-c-table__th"
                            data-ouia-component-id="group-add-service-accounts-table-th-1"
                            scope="col"
                            tabindex="-1"
                          >
                            Description
                          </th>
                          <th
                            class="pf-v5-c-table__th"
                            data-ouia-component-id="group-add-service-accounts-table-th-2"
                            scope="col"
                            tabindex="-1"
                          >
                            Client ID
                          </th>
                          <th
                            class="pf-v5-c-table__th"
                            data-ouia-component-id="group-add-service-accounts-table-th-3"
                            scope="col"
                            tabindex="-1"
                          >
                            Owner
                          </th>
                          <th
                            class="pf-v5-c-table__th"
                            data-ouia-component-id="group-add-service-accounts-table-th-4"
                            scope="col"
                            tabindex="-1"
                          >
                            Time created
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="pf-v5-c-table__tbody"
                        role="rowgroup"
                      >
                        <tr
                          class="pf-v5-c-table__tr"
                          data-ouia-component-id="group-add-service-accounts-table-tr-0"
                          data-ouia-component-type="PF5/TableRow"
                          data-ouia-safe="true"
                        >
                          <td
                            class="pf-v5-c-table__td pf-v5-c-table__check"
                            tabindex="-1"
                          >
                            <label>
                              <input
                                aria-label="Select row 0"
                                name="checkrow0"
                                type="checkbox"
                              />
                            </label>
                          </td>
                          <td
                            class="pf-v5-c-table__td"
                            data-ouia-component-id="group-add-service-accounts-table-td-0-0"
                            tabindex="-1"
                          >
                            just-created
                          </td>
                          <td
                            class="pf-v5-c-table__td"
                            data-ouia-component-id="group-add-service-accounts-table-td-0-1"
                            tabindex="-1"
                          >
                            just-created
                          </td>
                          <td
                            class="pf-v5-c-table__td"
                            data-ouia-component-id="group-add-service-accounts-table-td-0-2"
                            tabindex="-1"
                          >
                            0f81d08d-74b2
                          </td>
                          <td
                            class="pf-v5-c-table__td"
                            data-ouia-component-id="group-add-service-accounts-table-td-0-3"
                            tabindex="-1"
                          >
                            insights-qa
                          </td>
                          <td
                            class="pf-v5-c-table__td"
                            data-ouia-component-id="group-add-service-accounts-table-td-0-4"
                            tabindex="-1"
                          >
                            <div
                              style="display: contents;"
                            >
                              <span>
                                56 years ago
                              </span>
                            </div>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                  <div
                    class="pf-v5-l-stack__item"
                    data-ouia-component-id="group-add-service-accounts-stack-item-2"
                  >
                    <div
                      class="pf-v5-c-toolbar"
                      data-ouia-component-id="group-add-service-accounts-footer-toolbar"
                      data-ouia-component-type="PF5/Toolbar"
                      data-ouia-safe="true"
                      id="pf-random-id-3"
                    >
                      <div
                        class="pf-v5-c-toolbar__content"
                      >
                        <div
                          class="pf-v5-c-toolbar__content-section"
                        >
                          <div
                            class="pf-v5-c-toolbar__item pf-m-pagination"
                            data-ouia-component-id="group-add-service-accounts-footer-toolbar-pagination"
                          >
                            <div
                              class="pf-v5-c-pagination"
                              data-ouia-component-id="OUIA-Generated-Pagination-top-4"
                              data-ouia-component-type="PF5/Pagination"
                              data-ouia-safe="true"
                              id="options-menu-top-pagination"
                              style="--pf-v5-c-pagination__nav-page-select--c-form-control--width-chars: 2;"
                            >
                              <div
                                class="pf-v5-c-pagination__total-items"
                              >
                                <b>
                                  1
                                   - 
                                  2
                                </b>
                                 
                                of
                                 
                                <b>
                                  2
                                </b>
                                 
                              </div>
                              <button
                                aria-expanded="false"
                                aria-haspopup="listbox"
                                class="pf-v5-c-menu-toggle pf-m-plain pf-m-text"
                                data-ouia-component-id="OUIA-Generated-MenuToggle-plainText-4"
                                data-ouia-component-type="PF5/MenuToggle"
                                data-ouia-safe="true"
                                id="options-menu-top-toggle"
                                type="button"
                              >
                                <span
                                  class="pf-v5-c-menu-toggle__text"
                                >
                                  <b>
                                    1
                                     - 
                                    2
                                  </b>
                                   
                                  of
                                   
                                  <b>
                                    2
                                  </b>
                                   
                                </span>
                                <span
                                  class="pf-v5-c-menu-toggle__controls"
                                >
                                  <span
                                    class="pf-v5-c-menu-toggle__toggle-icon"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="pf-v5-svg"
                                      fill="currentColor"
                                      height="1em"
                                      role="img"
                                      viewBox="0 0 320 512"
                                      width="1em"
                                    >
                                      <path
                                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </button>
                              <nav
                                aria-label="Pagination"
                                class="pf-v5-c-pagination__nav"
                              >
                                <div
                                  class="pf-v5-c-pagination__nav-control pf-m-first"
                                >
                                  <button
                                    aria-disabled="true"
                                    aria-label="Go to first page"
                                    class="pf-v5-c-button pf-m-plain pf-m-disabled"
                                    data-action="first"
                                    data-ouia-component-id="OUIA-Generated-Button-plain-15"
                                    data-ouia-component-type="PF5/Button"
                                    data-ouia-safe="true"
                                    disabled=""
                                    type="button"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="pf-v5-svg"
                                      fill="currentColor"
                                      height="1em"
                                      role="img"
                                      viewBox="0 0 448 512"
                                      width="1em"
                                    >
                                      <path
                                        d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
                                      />
                                    </svg>
                                  </button>
                                </div>
                                <div
                                  class="pf-v5-c-pagination__nav-control"
                                >
                                  <button
                                    aria-disabled="true"
                                    aria-label="Go to previous page"
                                    class="pf-v5-c-button pf-m-plain pf-m-disabled"
                                    data-action="previous"
                                    data-ouia-component-id="OUIA-Generated-Button-plain-16"
                                    data-ouia-component-type="PF5/Button"
                                    data-ouia-safe="true"
                                    disabled=""
                                    type="button"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="pf-v5-svg"
                                      fill="currentColor"
                                      height="1em"
                                      role="img"
                                      viewBox="0 0 256 512"
                                      width="1em"
                                    >
                                      <path
                                        d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                                      />
                                    </svg>
                                  </button>
                                </div>
                                <div
                                  class="pf-v5-c-pagination__nav-page-select"
                                >
                                  <span
                                    class="pf-v5-c-form-control pf-m-disabled"
                                  >
                                    <input
                                      aria-invalid="false"
                                      aria-label="Current page"
                                      data-ouia-component-id="OUIA-Generated-TextInputBase-4"
                                      data-ouia-component-type="PF5/TextInput"
                                      data-ouia-safe="true"
                                      disabled=""
                                      max="1"
                                      min="1"
                                      type="number"
                                      value="1"
                                    />
                                  </span>
                                  <span
                                    aria-hidden="true"
                                  >
                                    of
                                     
                                    1
                                  </span>
                                </div>
                                <div
                                  class="pf-v5-c-pagination__nav-control"
                                >
                                  <button
                                    aria-disabled="true"
                                    aria-label="Go to next page"
                                    class="pf-v5-c-button pf-m-plain pf-m-disabled"
                                    data-action="next"
                                    data-ouia-component-id="OUIA-Generated-Button-plain-17"
                                    data-ouia-component-type="PF5/Button"
                                    data-ouia-safe="true"
                                    disabled=""
                                    type="button"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="pf-v5-svg"
                                      fill="currentColor"
                                      height="1em"
                                      role="img"
                                      viewBox="0 0 256 512"
                                      width="1em"
                                    >
                                      <path
                                        d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                                      />
                                    </svg>
                                  </button>
                                </div>
                                <div
                                  class="pf-v5-c-pagination__nav-control pf-m-last"
                                >
                                  <button
                                    aria-disabled="true"
                                    aria-label="Go to last page"
                                    class="pf-v5-c-button pf-m-plain pf-m-disabled"
                                    data-action="last"
                                    data-ouia-component-id="OUIA-Generated-Button-plain-18"
                                    data-ouia-component-type="PF5/Button"
                                    data-ouia-safe="true"
                                    disabled=""
                                    type="button"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="pf-v5-svg"
                                      fill="currentColor"
                                      height="1em"
                                      role="img"
                                      viewBox="0 0 448 512"
                                      width="1em"
                                    >
                                      <path
                                        d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
                                      />
                                    </svg>
                                  </button>
                                </div>
                              </nav>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="pf-v5-c-toolbar__content pf-m-hidden"
                        hidden=""
                      >
                        <div
                          class="pf-v5-c-toolbar__group"
                        />
                        <div
                          class="pf-v5-c-toolbar__item"
                        >
                          <button
                            aria-disabled="false"
                            class="pf-v5-c-button pf-m-link pf-m-inline"
                            data-ouia-component-id="group-add-service-accounts-footer-toolbar-clear-all-filters"
                            data-ouia-component-type="PF5/Button"
                            data-ouia-safe="true"
                            type="button"
                          >
                            Clear filters
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <footer
          class="pf-v5-c-modal-box__footer"
        >
          <button
            aria-disabled="true"
            class="pf-v5-c-button pf-m-primary pf-m-disabled"
            data-ouia-component-id="primary-confirm-button"
            data-ouia-component-type="PF5/Button"
            data-ouia-safe="true"
            disabled=""
            type="button"
          >
            Add to group
          </button>
          <button
            aria-disabled="false"
            class="pf-v5-c-button pf-m-link"
            data-ouia-component-id="secondary-cancel-button"
            data-ouia-component-type="PF5/Button"
            data-ouia-safe="true"
            type="button"
          >
            Cancel
          </button>
        </footer>
      </div>
    </div>
  </div>
</body>
`;
